--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,1 +1,31 @@
+.App {
+    display: flex;
+    flex-direction: column;
+    background: rgb(76, 138, 209);
+    width: 300px;
+    height: 300px;
+    border-radius: 20px;
+}
 
+#display {
+    height: 50px;
+    background: chartreuse;
+    border-radius: 20px 20px 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+#buttons {
+    padding: 15px;
+    height: 200px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 15px;
+}
+
+.drum-pad {
+    background: rgb(237, 100, 225);
+    border-radius: 10px;
+    cursor: pointer;
+}
